# pynirs

./: .gitattributes  .gitignore  CHANGELOG.md  INSTALL.md  MANIFEST.in  README.md  TODO.md  VERSION  cleandirs  marker_demo.m  newrelease_todo  pyproject.toml  refresh  setup.cfg  setup.py
pynirs/: _gittag.py  _version.py  bidsio.py  cbv_funcs.py  spo2funcs.py  spo2funcs.py.safe  version.py
pynirs/data/: RAW_20230322_125256988.txt  RAW_20230322_130009994.txt  hoot_CH1_peakwaveform.txt  testmedwatch
pynirs/scripts/: checkfnirs  denoise  mergebidstcfiles  plethproc  unpackmedwatch
