[metadata]
description_file = README.rst
name = pynirs
description = Tools for performing time delay analysis on fMRI data
long_description = file: README.rst
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/bbfrederick/pynirs
author = Blaise Frederick
author_email = BBFrederick@mclean.harvard.edu,
license = Apache Software License
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: MacOS X
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Medical Science Apps.
project_urls = 
    Documentation = https://pynirs.readthedocs.io
    Source = https://github.com/bbfrederick/pynirs
    Tracker = https://github.com/bbfrederick/pynirs/issues

[options]
install_requires =
    numpy
    scipy
    pandas
    scikit-learn
    matplotlib
    statsmodels
py_modules = 
    pynirs/bidsio
    pynirs/cbv_funcs
    pynirs/spo2funcs
scripts = 
    pynirs/scripts/plethproc
    pynirs/scripts/denoise
    pynirs/scripts/unpackmedwatch
    pynirs/scripts/checkfnirs


#[versioneer]
#VCS = git
#style = pep440
#versionfile_source = rapidtide/_version.py
#versionfile_build = rapidtide/_version.py
#tag_prefix =

[flake8]
max-line-length = 99
exclude =
    *build/
    _version.py
    rapidtide/disabledtests/
    rapidtide/candidatetests/
putty-ignore =
    */__init__.py : +F401
ignore =
    E203
    E402
    E501
    E722
    W503
